--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="Expo-Buro Logo">
+        <img src="img/logo.png" alt="img/Expo-Buro Logo">
     </header>
     <nav>
         <a href="#about">О нас</a>
