--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="логотип компании">
+        <img src="logo.png" alt="логотип компании">
     </header>
     <nav>
         <a href="#about">О нас</a>
